<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/display_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="45dp"
    android:background="@drawable/back"
    android:backgroundTintMode="src_over"
    android:gravity="bottom|center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".startup_activities.LoginActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/lxg_bold"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gSigninBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/elevationOverlayColor"
        android:fontFamily="@font/lxg_bold"
        android:text="@string/sign_in_using_Google"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:icon="@drawable/google_logo"
        app:iconGravity="start"
        app:iconPadding="8dp"
        app:iconSize="20dp"
        app:iconTint="@color/white" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lxg_bold"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lxg_bold"
        android:text="@string/skip"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/registerNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lxg_bold"
        android:gravity="center"
        android:text="@string/click_here_to_register"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

</LinearLayout>