<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailContainer"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/display_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".meal_details.MealDetails">

        <TextView
            android:id="@+id/nameOfTheMeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/lxg_bold"
            android:text="@string/meal_name_details"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageOfTheMeal"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameOfTheMeal"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/Ingredients_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:elegantTextHeight="true"
            android:fontFamily="@font/lxg_bold"
            android:text="@string/ingredients_snd_measures"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/originCountryName" />


        <TextView
            android:id="@+id/origiCountryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/lxg_bold"
            android:text="@string/original_country"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageOfTheMeal" />


        <TextView
            android:id="@+id/originCountryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lxg_bold"
            android:text="@string/country"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/origiCountryTitle"
            app:layout_constraintStart_toStartOf="@+id/origiCountryTitle"
            app:layout_constraintTop_toBottomOf="@+id/origiCountryTitle" />

        <TextView
            android:id="@+id/Instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:elegantTextHeight="true"
            android:fontFamily="@font/lxg_bold"
            android:text="@string/instructions"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredientRV" />

        <TextView
            android:id="@+id/steps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/lxg_regular"
            android:text="@string/steps"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Instructions" />

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:autoPlay="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/steps" />

        <Button
            android:id="@+id/addToFavsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lxg_bold"
            android:text="@string/add_to_favourites"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/sendCalender"
            app:layout_constraintTop_toBottomOf="@+id/imageOfTheMeal" />

        <Button
            android:id="@+id/addToPlanBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lxg_bold"
            android:text="@string/add_to_plan"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageOfTheMeal"
            app:layout_constraintTop_toTopOf="@+id/imageOfTheMeal" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredientRV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Ingredients_title" />

        <Button
            android:id="@+id/sendCalender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lxg_bold"
            android:text="@string/add_to_calendar"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/addToPlanBtn"
            app:layout_constraintStart_toStartOf="@+id/addToPlanBtn"
            app:layout_constraintTop_toBottomOf="@+id/addToPlanBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

