<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/display_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="45dp"
    android:background="@drawable/back"
    android:gravity="bottom|center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".startup_activities.RegistrationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/lxg_bold"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:fontFamily="@font/lxg_regular"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lxg_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lxg_regular"
        android:text="@string/register" />

    <TextView
        android:id="@+id/loginNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lxg_bold"
        android:gravity="center"
        android:text="@string/click_to_login"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />
</LinearLayout>