<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="10dp">

    <ImageView
        android:id="@+id/dayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/breakfast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lxg_regular"
        android:text="@string/breakfast"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dayName" />

    <TextView
        android:id="@+id/lunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lxg_regular"
        android:text="@string/lunch"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/breakfast"
        app:layout_constraintTop_toTopOf="@+id/lunchMeal" />

    <TextView
        android:id="@+id/dinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lxg_regular"
        android:text="@string/dinner"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/breakfast"
        app:layout_constraintTop_toTopOf="@+id/dinnerMeal" />

    <TextView
        android:id="@+id/bfMeal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/lxg_regular"
        android:text="@string/no_meal"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/breakfast"
        app:layout_constraintTop_toTopOf="@+id/breakfast" />

    <TextView
        android:id="@+id/lunchMeal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/lxg_regular"
        android:text="@string/no_meal"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bfMeal"
        app:layout_constraintTop_toBottomOf="@+id/bfMeal" />

    <TextView
        android:id="@+id/dinnerMeal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/lxg_regular"
        android:text="@string/no_meal"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bfMeal"
        app:layout_constraintTop_toBottomOf="@+id/lunchMeal" />
</androidx.constraintlayout.widget.ConstraintLayout>