<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.SearchFragment">

    <TextView
        android:id="@+id/chooseTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lxg_bold"
        android:text="@string/choose_your_search_criteria"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButtonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseTxt"
        app:singleSelection="true">

        <Button
            android:id="@+id/btnCountry"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_country"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnIngredient"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_ingredient"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnCategory"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_category"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </com.google.android.material.button.MaterialButtonToggleGroup>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/searchCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButtonGroup">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:iconifiedByDefault="false"
            android:queryBackground="@android:color/transparent"
            android:queryHint="Type here to search..."
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleButtonGroup" />


    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/searchFactor"
        app:layout_constraintStart_toStartOf="@+id/searchFactor"
        app:layout_constraintTop_toBottomOf="@+id/searchCardView" />

    <ListView
        android:id="@+id/searchFactor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/searchView"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchCardView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="NotSibling">

    </ListView>


</androidx.constraintlayout.widget.ConstraintLayout>